# flscp

./: .gitignore  AUTHORS  CHANGELOG  Makefile  Makefile.in  README.md  configure.ac  eer_diagram.mwb  fls.php  flscp.sublime-project  flscp.sublime-workspace  lupdate.py  setup.py
flscp/: CheckPassword.py  Encryption.php  Printer.py  ansistrm.py  database.py  dummyinotify.py  flsconfig.py  flsconfiguration.py  flscp.py  flscpserver.py  flssplash.py  mailer.py  observer.py  pwgen.py  saltencryption.py  server.ini  tools.py  translator.py
flscp/l18n/: de_DE.ts
flscp/libs/: fls.php
flscp/libs/SaltEncryption/: SaltEncryption.class.php  compare.php  encrypt.php
flscp/modules/: dns.py  domain.py  flscertification.py  mail.py
flscp/res/: logos.qrc  logos_rc.py
flscp/templates/default/: changeforward.txt  changemail.txt  newforward.txt  newmail.txt  sendpw.txt  sendpwlink.txt
flscp/templates/styles/: nature.css
flscp/ui/: about.ui  changelog.ui  cp.ui  domain.ui  hostselector.ui  maileditor.ui  mailform.ui  output.ui
sql/: 0.9.sql  update_08_09.sql
